2012-09-20  Walter Lee  <walt@tilera.com>

	* elf32-tilepro.c (tilepro_elf_relocate_section): Adjust got
	relocations with value of hgot.
	* elfxx-tilegx.c (tilegx_elf_relocate_section): Ditto.

2012-09-19  Steve Ellcey  <sellcey@mips.com>

	* config.bfd: Add mips*-mti-elf* target.

2012-09-18  H.J. Lu  <hongjiu.lu@intel.com>

	PR ld/14591
	* elf-bfd.h (_bfd_elf_merge_symbol): Add an argument to return 
	if the old symbol is weak.

	* elf32-sh-symbian.c (sh_symbian_relocate_section): Update
	_bfd_elf_merge_symbol call.

	* elflink.c (_bfd_elf_merge_symbol): Add an argument to return
	if the old symbol is weak.
	(_bfd_elf_add_default_symbol): Update _bfd_elf_merge_symbol
	call.
	(elf_link_add_object_symbols): Don't update symbol type from a
	weak definition.  Update symbol type from a common symbol when
	overriding a weak symbol.

2012-09-17  H.J. Lu  <hongjiu.lu@intel.com>

	* elf32-i386.c (elf_i386_convert_mov_to_lea): Ignore discarded
	section.
	* elf64-x86-64.c (elf_x86_64_convert_mov_to_lea): Likewise.

2012-09-17  H.J. Lu  <hongjiu.lu@intel.com>

	* elf32-i386.c (elf_i386_finish_dynamic_symbol): Replace return
	FALSE with abort.
	* elf64-x86-64.c (elf_x86_64_finish_dynamic_symbol): Likewise.

2012-09-17  Walter Lee  <walt@tilera.com>

	* elf32-tilepro.c (tilepro_elf_relocate_section): Remove unused
	got_base variable.
	* elfxx-tilegx.c (tilegx_elf_relocate_section): Ditto.

2012-09-17  Walter Lee  <walt@tilera.com>

	* elf32-tilepro.c (tilepro_elf_relocate_section): Fix computation
	of got relocations for when .got.plt section is merged with .got.
	* elfxx-tilegx.c (tilegx_elf_relocate_section): Ditto.

2012-09-14  David Edelsohn  <dje.gcc@gmail.com>

	* configure: Regenerate.

2012-09-13  Anthony Green  <green@moxielogic.com>

	* targets.c (bfd_elf32_bigmoxie_vec, bfd_elf32_littlemoxie_vec):
	Define.
	(bfd_elf32_moxie_vec): Remove.
	* config.bfd, configure.in: Add bi-endian support for moxie.
	* configure: Rebuilt.